# ndx-cell-culture

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture_decisions.md  design.md  examples.md  field_reference.md  maintainer_review.md  modeling_principles.md  release.md
docs/catalog/: ndx-meta.yaml.template
docs/source/: Makefile  README.md
docs/source/source/: api_reference.rst  architecture_decisions.rst  conf.py  conf_doc_autogen.py  credits.rst  examples.rst  field_reference.rst  format.rst  index.rst  modeling_guide.rst  modeling_principles.rst  overview.rst  release_notes.rst  usage.rst  validation_dandi.rst
docs/source/source/_static/: theme_overrides.css
examples/: create_basic_organoid_nwb.py  create_review_scenarios.py  create_synthetic_scenarios.py  scenario_builders.py
scripts/: check_release.sh  create_extension_spec.py
spec/: ndx-cell-culture.extensions.yaml  ndx-cell-culture.namespace.yaml
src/ndx_cell_culture/: __init__.py  validation.py
src/spec/: create_extension_spec.py
tests/: test_schema.py
