[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndx-cell-culture"
version = "1.0rc2"
authors = [
    { name = "David Parks", email = "dfparks@ucsc.edu" },
]
description = "NWB extension for cultured neural preparations, organoids, cell lines, variants, constructs, protocols, recording context, and pharmacology."
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
]
keywords = [
    "NeurodataWithoutBorders",
    "NWB",
    "nwb-extension",
    "ndx-extension",
    "organoid",
    "cell-culture",
]
dependencies = [
    "pynwb>=2.8.3",
    "hdmf>=3.14.6",
    "importlib_resources>=5.12",
]

[project.optional-dependencies]
test = [
    "build>=1.2",
    "nwbinspector>=0.5",
    "pytest>=8.0",
    "twine>=5.0",
]
docs = [
    "hdmf-docutils>=0.4.8",
    "sphinx>=7,<8",
    "sphinxcontrib-mermaid>=1.0",
    "sphinx-rtd-theme>=2.0",
]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "hdmf-docutils>=0.4.8",
    "nwbinspector>=0.5",
    "sphinx>=7,<8",
    "sphinxcontrib-mermaid>=1.0",
    "sphinx-rtd-theme>=2.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/braingeneers/ndx-cell-culture"
Repository = "https://github.com/braingeneers/ndx-cell-culture"
"Bug Tracker" = "https://github.com/braingeneers/ndx-cell-culture/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ndx_cell_culture"]

[tool.hatch.build.targets.wheel.force-include]
"spec" = "ndx_cell_culture/spec"

[tool.hatch.build.targets.sdist]
include = [
    "/.github/workflows/test.yml",
    "/LICENSE.txt",
    "/README.md",
    "/docs",
    "/examples",
    "/pyproject.toml",
    "/scripts",
    "/spec",
    "/src",
    "/tests",
]
exclude = [
    "/**/__pycache__",
    "/**/*.pyc",
    "/**/*.nwb",
    "/examples/generated_scenarios",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
